--- a/FBLClient.ini
+++ b/FBLClient.ini
@@ -16,8 +16,8 @@ chain-cert =
 ca_cert_file = isrgrootx1.pem
 intermediate_cert_file = letsencryptauthorityx3.pem
 
-[ID]
-digits = 1
+[UNI]
+digits = 0000
 
 [DEBUG]
 debug = False
